--- a/index.html
+++ b/index.html
@@ -1,96 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="/_vercel/insights/script.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
-    />
-    <title>Vercel HTML Starter</title>
-    <meta
-      name="description"
-      content="High-performance HTML based website template."
-    />
-  </head>
-  <body>
-    <h1>Vercel HTML Starter</h1>
-    <p>
-      This template is a simple, but powerful single
-      <code>index.html</code> file deployed to
-      <a href="https://vercel.com">Vercel</a>. When your site is deployed, all
-      static assets (like HTML, JavaScript, CSS, images, and more) are deployed
-      globally to every
-      <a href="https://vercel.com/docs/concepts/edge-network/overview"
-        >Vercel Edge Network</a
-      >
-      region.
-    </p>
-    <h2>Simple, privacy-friendly analytics</h2>
-    <p>
-      Want to understand your visitor traffic? Vercel Analytics gives you
-      first-party, privacy-friendly traffic analytics for your HTML site. This
-      template is already configured using the following script:
-    </p>
-    <pre><code>&lt;script defer src="/_vercel/insights/script.js"&gt;&lt;/script&gt;</code></pre>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/analytics">Vercel Analytics</a>.
-    </p>
-    <h2>Integrated with git</h2>
-    <p>
-      Deploying updates to your site is as simple as
-      <code>git push</code> thanks to Vercel's advanced
-      <a href="https://vercel.com/docs/concepts/git">Git Integration</a>.
-      Support for GitHub, GitLab, Bitbucket is zero-configuration, and with the
-      flexible Vercel CLI and API, you can integrate with any tool possible.
-    </p>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/git">Git Integration</a>.
-    </p>
-    <h2>Fast <code>gzip</code> compression</h2>
-    <p>
-      To help ensure the smallest possible file sizes for your static assets,
-      the Vercel Edge Network compresses files by default using
-      <code>gzip</code>. You can also optionally use
-      <code>brotli</code> compressesion if you prefer.
-    </p>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/edge-network/compression"
-        >compression</a
-      >.
-    </p>
-    <h2>Advanced routing configuration</h2>
-    <p>
-      Vercel gives you a variety of ways to configure the routing of your
-      website. For example, adding redirects, rewrites, or headers to your page.
-      While you can use <code>vercel.json</code> to define these through JSON,
-      you can also express your routing configuration as code using
-      <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Edge Middleware</a
-      >.
-    </p>
-    <p>
-      Middleware runs before the
-      <a href="https://vercel.com/docs/concepts/edge-network/caching"
-        >Vercel Edge Network Cache</a
-      >, so you can configure routing exactly as your application needs. For
-      example, this template uses <code>middleware.js</code> defined in the root
-      of the repository to add additional security headers to the site:
-    </p>
-    <pre><code>referrer-policy: origin-when-cross-origin
-strict-transport-security: max-age=31536000; includeSubDomains; preload
-x-content-type-options: nosniff
-x-dns-prefetch-control: on
-x-frame-options: DENY</code></pre>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Edge Middleware</a
-      >.
-    </p>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Process Viewer</title>
+    <style>
+        /* Basic styling */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            display: flex;
+            height: 100vh;
+        }
+
+        .text-section {
+            width: 50%;
+            overflow-y: scroll;
+        }
+
+        .image-section {
+            width: 50%;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+
+        .step {
+            padding: 20px;
+            border-bottom: 1px solid #ccc;
+        }
+
+        /* Adjust height based on number of steps */
+        .step {
+            height: 25vh;  /* Example: 4 steps would make up the full height */
+        }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <!-- Text Section -->
+    <div class="text-section">
+        <div class="step" data-image-url="path_to_image_1.jpg">
+            Step 1: Description of step 1
+        </div>
+        <div class="step" data-image-url="path_to_image_2.jpg">
+            Step 2: Description of step 2
+        </div>
+        <div class="step" data-image-url="path_to_image_3.jpg">
+            Step 3: Description of step 3
+        </div>
+        <!-- Add more steps as needed -->
+    </div>
+    
+    <!-- Image Section -->
+    <div class="image-section">
+        <!-- Image will be set via JavaScript -->
+    </div>
+</div>
+
+<script>
+    // Vanilla JavaScript
+    const textSection = document.querySelector('.text-section');
+    const imageSection = document.querySelector('.image-section');
+    
+    textSection.addEventListener('scroll', function() {
+        const steps = document.querySelectorAll('.step');
+        let imageToDisplay = '';
+        // Check which step is currently in view
+        for(const step of steps) {
+            const rect = step.getBoundingClientRect();
+            if (rect.top < window.innerHeight && rect.bottom > 0) {
+                // The step is in view
+                imageToDisplay = step.getAttribute('data-image-url');
+                break;
+            }
+        }
+        if (imageToDisplay) {
+            imageSection.style.backgroundImage = `url(${imageToDisplay})`;
+        }
+    });
+</script>
+
+</body>
 </html>
