--- a/index.html
+++ b/index.html
@@ -3,93 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Process Viewer</title>
+    <title>Tint3d Webpage</title>
     <style>
-        /* Basic styling */
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            overflow-x: hidden;
         }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .header {
-            display: flex;
-            justify-content: space-between;
-            width: 90%;
-            padding: 20px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-        }
-
-        .steps-section {
-            display: flex;
-            flex-direction: column;
-            width: 90%;
-            overflow-y: scroll;
-            flex-grow: 1;
-        }
-
-        .step {
+        
+        #header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 60px;
+            background-color: white;
             display: flex;
             justify-content: space-between;
-            padding: 20px;
-            border-bottom: 1px solid #ccc;
+            padding: 10px 20px;
             align-items: center;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
-        .step-text {
-            width: 60%;
-            padding-right: 20px;
+        .section {
+            margin-top: 70px;
+            background-color: white;
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            margin: 70px 20px 20px 20px;
         }
 
-        .step-image {
-            width: 35%;
-            height: auto;
-            max-height: 150px; /* Adjust based on desired height */
-        }
-
-        /* Navigation links */
-        .nav-links {
-            display: flex;
-            gap: 15px;
+        .section img {
+            float: right;
         }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <!-- Header Section -->
-    <div class="header">
-        <div>Tint3d Logo</div>
-        <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="#">Tech</a>
-            <a href="#">Team</a>
-        </div>
+<div id="header">
+    <span>Tint3d Logo</span>
+    <div>
+        <a href="#home">Home</a>
+        <a href="#tech">Tech</a>
+        <a href="#team">Team</a>
     </div>
-    
-    <!-- Steps Section -->
-    <div class="steps-section">
-        <div class="step">
-            <div class="step-text">Step One: Description of step 1</div>
-            <img class="step-image" src="path_to_image_1.jpg" alt="Image for step 1">
-        </div>
-        <div class="step">
-            <div class="step-text">Step Two: Description of step 2</div>
-            <img class="step-image" src="path_to_image_2.jpg" alt="Image for step 2">
-        </div>
-        <div class="step">
-            <div class="step-text">Step Three: Description of step 3</div>
-            <img class="step-image" src="path_to_image_3.jpg" alt="Image for step 3">
-        </div>
-        <!-- Add more steps as needed -->
-    </div>
+</div>
+
+<div class="section" id="home">
+    <h2>Step One</h2>
+    <img src="path_to_your_image" alt="Image Description">
+</div>
+
+<div class="section" id="tech">
+    <h2>Step One</h2>
+    <img src="path_to_your_image" alt="Image Description">
+</div>
+
+<div class="section" id="team">
+    <h2>Step One</h2>
+    <img src="path_to_your_image" alt="Image Description">
 </div>
 
 </body>
