--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: Arial, sans-serif;
+            font-family: Poppins, sans-serif;
             background-color: #f0f0f0;
             overflow-x: hidden;
         }
@@ -16,13 +16,14 @@
         #header {
             position: fixed;
             top: 0;
-            left: 0;
-            right: 0;
+            left: 10;
+            right: 10;
             height: 60px;
             background-color: white;
             display: flex;
             justify-content: space-between;
             padding: 10px 20px;
+            border-radius: 15px;
             align-items: center;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
@@ -53,19 +54,23 @@
 </div>
 
 <div class="section" id="home">
-    <h2>Step One</h2>
-    <img src="path_to_your_image" alt="Image Description">
+    <h2>Raw SLA Parts</h2>
+    <img src="path_to_your_image" alt="Raw SLS Part">
+    <p>Raw SLA parts have great mechanical properties, but they are held back by their lack of color. </p>
 </div>
 
 <div class="section" id="tech">
-    <h2>Step One</h2>
-    <img src="path_to_your_image" alt="Image Description">
+    <h2>Heat and Dye Process</h2>
+    <img src="path_to_your_image" alt="SLS part with dye on surface">
+    <p>Parts are submerged in heated dye. They are moved around in this solution to ensure even dye. </p>
 </div>
 
 <div class="section" id="team">
-    <h2>Step One</h2>
-    <img src="path_to_your_image" alt="Image Description">
+    <h2>Drying Process</h2>
+    <img src="path_to_your_image" alt="Finished and dried part">
+    <p>Finally, the dye is automatially drained out, and the part is dried and sprayed down to remove excess dye. </p>
 </div>
+
 
 </body>
 </html>
