--- a/index.html
+++ b/index.html
@@ -12,6 +12,48 @@
             background-color: #f0f0f0;
             overflow-x: hidden;
         }
+body {
+    font-family: Arial, sans-serif; /* You can replace this with your preferred font. */
+    margin: 0;
+    padding: 0;
+}
+
+#header {
+    background-color: #f2f2f2; /* Replace this with your preferred background color. */
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    width: 70%; /* Adjust this value to change the width of the header. */
+    margin: 0 auto;
+    padding: 15px 0;
+    position: relative;
+    top: -15px; /* Adjust this to tuck more or less of the header above the top. */
+    text-align: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow beneath the header. */
+}
+
+#header span {
+    font-size: 24px; /* Adjust this to your liking. */
+    font-weight: bold;
+    margin-bottom: 10px;
+    display: block;
+}
+
+#header div {
+    display: flex;
+    justify-content: space-around; /* This will space out the links evenly. */
+}
+
+#header a {
+    text-decoration: none;
+    color: #333; /* Replace with your preferred link color. */
+    padding: 8px 15px;
+    border-radius: 5px; /* Optional: Adds a subtle rounded corner to links on hover. */
+    transition: background-color 0.3s ease; /* Optional: Smooth transition on hover. */
+}
+
+#header a:hover {
+    background-color: #e0e0e0; /* Replace with your preferred hover color. */
+}
         
         #header {
             position: fixed;
@@ -55,20 +97,20 @@
 
 <div class="section" id="home">
     <h2>Raw SLA Parts</h2>
-    <img src="path_to_your_image" alt="Raw SLS Part">
-    <p>Raw SLA parts have great mechanical properties, but they are held back by their lack of color. </p>
+    <img src="bracket1 (1).png" alt="Raw SLS Part">
+    <p>Raw SLA parts have great mechanical properties, but they are held back by their lack of color. For companies that are looking to use their parts for focus groups, real world testing or as end use products it is important to have lifelike parts.  </p>
 </div>
 
 <div class="section" id="tech">
     <h2>Heat and Dye Process</h2>
-    <img src="path_to_your_image" alt="SLS part with dye on surface">
-    <p>Parts are submerged in heated dye. They are moved around in this solution to ensure even dye. </p>
+    <img src="bracket1 (2).png" alt="SLS part with dye on surface">
+    <p>Your parts begin their process in our machines in a warmed and preassure treated dye bath. The heat and pressure helps insure even coating, and our jet system moves parts around without the fear of scratching them. </p>
 </div>
 
 <div class="section" id="team">
     <h2>Drying Process</h2>
-    <img src="path_to_your_image" alt="Finished and dried part">
-    <p>Finally, the dye is automatially drained out, and the part is dried and sprayed down to remove excess dye. </p>
+    <img src="bracket1 (3).png" alt="Finished and dried part">
+    <p>Finally, the dye is automatially drained out, and the part is dried and sprayed down to remove excess dye. A dry heating process is quickly done to set the dye in the part. All of these steps are acheived in one machine to further simplify your workflow. </p>
 </div>
 
 
