photo size adjusted

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@ body {
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             margin: 70px 20px 20px 20px;
         }
+        .section img {
+        float: right;             /* Make the image float to the right */
+        border-radius: 10px;      /* Make the edges rounded */
+        height: 100px;            /* Set the height to 100px */
+        margin-left: 20px;        /* Add some space between the image and the text */
+        }
+
+        .section p {
+        overflow: hidden;         /* Prevent text from wrapping underneath the image */
+        margin-right: 10px;       /* Give a little right margin to the text */
+        }
+
 
         .section img {
             float: right;
