--- a/index.html
+++ b/index.html
@@ -8,58 +8,16 @@
         body {
             margin: 0;
             padding: 0;
-            font-family: Poppins, sans-serif;
+            font-family: Poppins, Arial, sans-serif;
             background-color: #f0f0f0;
             overflow-x: hidden;
         }
-body {
-    font-family: Arial, sans-serif; /* You can replace this with your preferred font. */
-    margin: 0;
-    padding: 0;
-}
 
-#header {
-    background-color: #f2f2f2; /* Replace this with your preferred background color. */
-    border-bottom-left-radius: 15px;
-    border-bottom-right-radius: 15px;
-    width: 70%; /* Adjust this value to change the width of the header. */
-    margin: 0 auto;
-    padding: 15px 0;
-    position: relative;
-    top: -15px; /* Adjust this to tuck more or less of the header above the top. */
-    text-align: center;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow beneath the header. */
-}
-
-#header span {
-    font-size: 24px; /* Adjust this to your liking. */
-    font-weight: bold;
-    margin-bottom: 10px;
-    display: block;
-}
-
-#header div {
-    display: flex;
-    justify-content: space-around; /* This will space out the links evenly. */
-}
-
-#header a {
-    text-decoration: none;
-    color: #333; /* Replace with your preferred link color. */
-    padding: 8px 15px;
-    border-radius: 5px; /* Optional: Adds a subtle rounded corner to links on hover. */
-    transition: background-color 0.3s ease; /* Optional: Smooth transition on hover. */
-}
-
-#header a:hover {
-    background-color: #e0e0e0; /* Replace with your preferred hover color. */
-}
-        
         #header {
             position: fixed;
-            top: -10;
-            left: 10;
-            right: 10;
+            top: -10px;
+            left: 10px;
+            right: 10px;
             height: 60px;
             background-color: white;
             display: flex;
@@ -70,6 +28,30 @@ body {
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
+        #header span {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 10px;
+            display: block;
+        }
+
+        #header div {
+            display: flex;
+            justify-content: space-around;
+        }
+
+        #header a {
+            text-decoration: none;
+            color: #333;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        #header a:hover {
+            background-color: #e0e0e0;
+        }
+
         .section {
             margin-top: 70px;
             background-color: white;
@@ -78,22 +60,19 @@ body {
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             margin: 70px 20px 20px 20px;
         }
-        .section img {
-        float: right;             /* Make the image float to the right */
-        border-radius: 10px;      /* Make the edges rounded */
-        height: 100px;            /* Set the height to 100px */
-        margin-left: 20px;        /* Add some space between the image and the text */
-        }
-
-        .section p {
-        overflow: hidden;         /* Prevent text from wrapping underneath the image */
-        margin-right: 10px;       /* Give a little right margin to the text */
-        }
-
 
         .section img {
             float: right;
+            border-radius: 10px;
+            height: 100px;
+            margin-left: 20px;
         }
+
+        .section p {
+            overflow: hidden;
+            margin-right: 10px;
+        }
+
     </style>
 </head>
 <body>
@@ -110,21 +89,20 @@ body {
 <div class="section" id="home">
     <h2>Raw SLA Parts</h2>
     <img src="bracket1 (1).png" alt="Raw SLS Part">
-    <p>Raw SLA parts have great mechanical properties, but they are held back by their lack of color. For companies that are looking to use their parts for focus groups, real world testing or as end use products it is important to have lifelike parts.  </p>
+    <p>Raw SLA parts have great mechanical properties, but they are held back by their lack of color. For companies that are looking to use their parts for focus groups, real world testing or as end use products it is important to have lifelike parts.</p>
 </div>
 
 <div class="section" id="tech">
     <h2>Heat and Dye Process</h2>
     <img src="bracket1 (2).png" alt="SLS part with dye on surface">
-    <p>Your parts begin their process in our machines in a warmed and preassure treated dye bath. The heat and pressure helps insure even coating, and our jet system moves parts around without the fear of scratching them. </p>
+    <p>Your parts begin their process in our machines in a warmed and preassure treated dye bath. The heat and pressure helps insure even coating, and our jet system moves parts around without the fear of scratching them.</p>
 </div>
 
 <div class="section" id="team">
     <h2>Drying Process</h2>
     <img src="bracket1 (3).png" alt="Finished and dried part">
-    <p>Finally, the dye is automatially drained out, and the part is dried and sprayed down to remove excess dye. A dry heating process is quickly done to set the dye in the part. All of these steps are acheived in one machine to further simplify your workflow. </p>
+    <p>Finally, the dye is automatially drained out, and the part is dried and sprayed down to remove excess dye. A dry heating process is quickly done to set the dye in the part. All of these steps are acheived in one machine to further simplify your workflow.</p>
 </div>
-
 
 </body>
 </html>
