--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 <div id="header">
     <span>Tint3d Logo</span>
     <div>
-        <a href="#home">Home</a>
-        <a href="#tech">Tech</a>
-        <a href="#team">Team</a>
+        <a href="index.html">Home</a>
+        <a href="team.html">Our Team</a>
+        <a href="tech.html">Technology</a>
     </div>
 </div>
 
