--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <body>
 
 <div id="header">
-    <span>Tint3d Logo</span>
+    <img src="logo.css" alt="tint3d logo">
     <div>
         <a href="index.html">Home</a>
         <a href="team.html">Our Team</a>
