logo update index.html

--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
 </head>
 <body>
 
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+    
 <div id="header">
-    <img src="logo.css" alt="tint3d logo">
+    <img src="logoLarge.png" alt="tint3d logo">
     <div>
         <a href="index.html">Home</a>
         <a href="team.html">Our Team</a>
