--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="icon" href="logo.png" type="image/x-icon">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tint3d Webpage</title>
@@ -77,7 +80,7 @@
 </head>
 <body>
 
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+
     
 <div id="header">
     <img src="logoLarge.png" alt="tint3d logo">
@@ -91,20 +94,25 @@
 <div class="section" id="home">
     <h2>Raw SLA Parts</h2>
     <img src="bracket1 (1).png" alt="Raw SLS Part">
-    <p>Raw SLA parts have great mechanical properties, but they are held back by their lack of color. For companies that are looking to use their parts for focus groups, real world testing or as end use products it is important to have lifelike parts.</p>
+    <p>Selective Laser Sintering (SLS) has revolutionized the manufacturing process by enabling the creation of parts that traditional methods can't achieve. Harnessing the advantages of AI-powered CAD, SLS brings incredible potential. However, its primary limitation has been the restricted color palette, predominantly limited to Black, White, and Gray.</p>
+    <p>Raw SLA parts possess outstanding mechanical properties, but their lack of diverse color options becomes a constraint for those aiming for lifelike parts, especially when targeting end-users. Imagine if you could amplify the usability and aesthetic appeal of these parts without stretching your budget.</p>
 </div>
 
 <div class="section" id="tech">
     <h2>Heat and Dye Process</h2>
     <img src="bracket1 (2).png" alt="SLS part with dye on surface">
-    <p>Your parts begin their process in our machines in a warmed and preassure treated dye bath. The heat and pressure helps insure even coating, and our jet system moves parts around without the fear of scratching them.</p>
+    <p>Our groundbreaking low-cost dye machine, designed to enhance the color range of SLS printed products without compromising details. Our dye machine immerses your parts in a heated and pressure-treated dye bath, ensuring an even and flawless coat. The unique jet system guarantees that parts move around freely without the risk of scratching.</p>
+    <p>Unlike other surface treatments like Cerakote and vapor smoothing, which may affect dimensional accuracy, our dyeing process preserves the integrity of the printed part. The structure of the sintered powder remains unaffected, ensuring there's no warping, distortion, or alteration to the creep and long term properties of the material.</p>
 </div>
 
 <div class="section" id="team">
     <h2>Drying Process</h2>
     <img src="bracket1 (3).png" alt="Finished and dried part">
-    <p>Finally, the dye is automatially drained out, and the part is dried and sprayed down to remove excess dye. A dry heating process is quickly done to set the dye in the part. All of these steps are acheived in one machine to further simplify your workflow.</p>
+    <p>Once dyed, the excess dye is automatically drained, and the part is given a thorough rinse to eliminate residue. A rapid dry heating process sets the dye, guaranteeing longevity and vibrancy. Every step, from dyeing to drying, takes place in one unified machine, streamlining your workflow like never before.</p>
+    <p>Our open-platform approach means you're not limited to proprietary dyes. You can use any brand, opening the door to an infinite array of color options. SLA printing's vast color palette is now accessible for SLS, bridging the gap between aesthetics and functionality.</p>
+    <p>In a world where precision and appearance matter, we're here to redefine the standards of SLS 3D printing. Dive into an ocean of colors, maintain unparalleled quality, and leverage the full potential of additive manufacturing.</p>
 </div>
+
 
 </body>
 </html>
