--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 
     <link rel="icon" href="logo.png" type="image/x-icon">
+
+    <meta name="description" content="Discover a revolution in 3D printing with our cost-effective dye machine. Transform your SLS 3D printed parts with vibrant colors while ensuring the highest quality. Expand the horizons of additive manufacturing with us.">
+<meta name="keywords" content="SLS 3D printing, dye machine, additive manufacturing, vibrant colors, high quality, low-cost dye">
+<meta property="og:title" content="Revolutionize Your 3D Printing with Our Innovative Dye Machine">
+<meta property="og:description" content="Unleash unlimited colors for your SLS 3D printed parts. Elevate the quality and aesthetics of your creations with a all on one SLS dye machine">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
