margin and footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Tint3d Webpage</title>
     <style>
         body {
-            margin: 0;
+            margin: 10;
             padding: 0;
             font-family: Poppins, Arial, sans-serif;
             background-color: #f0f0f0;
@@ -57,7 +57,7 @@
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin: 70px 20px 20px 20px;
+            margin: 70px 30px 30px 30px;
         }
         .section img {
             float: right;
@@ -114,4 +114,12 @@
     <p>In a world where precision and appearance matter, we're here to redefine the standards of SLS 3D printing. Dive into an ocean of colors, maintain unparalleled quality, and leverage the full potential of additive manufacturing.</p>
 </div>
 </body>
+
+<footer style="background-color: #f2f2f2; padding: 20px 0; text-align: center;; font-size: 0.8em;">
+    <p style="color: #888; margin: 0;">© 2023 tint3d. All rights reserved.</p>
+    <p style="color: #888; margin: 0;">headquartered in beautiful milwaukee wisconsin</p>
+    <p style="color: #888; margin: 0;">this is a mockup for a class project</p>
+    <p style="color: #888; margin: 0;">we do not sell your data | please do not sell ours</p>
+</footer>
+
 </html>
