--- a/team.html
+++ b/team.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="logo.png" type="image/x-icon">
+    <meta name="description" content="Discover a revolution in 3D printing with our cost-effective dye machine. Transform your SLS 3D printed parts with vibrant colors while ensuring the highest quality. Expand the horizons of additive manufacturing with us.">
+<meta name="keywords" content="SLS 3D printing, dye machine, additive manufacturing, vibrant colors, high quality, low-cost dye">
+<meta property="og:title" content="Revolutionize Your 3D Printing with Our Innovative Dye Machine">
+<meta property="og:description" content="Unleash unlimited colors for your SLS 3D printed parts. Elevate the quality and aesthetics of your creations with a all on one SLS dye machine">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tint3d - Our Team</title>
+    <title>Tint3d Webpage</title>
     <style>
         body {
-            margin: 0;
+            margin: 10;
             padding: 0;
             font-family: Poppins, Arial, sans-serif;
             background-color: #f0f0f0;
             overflow-x: hidden;
         }
-
         #header {
             position: fixed;
             top: -10px;
@@ -27,19 +31,16 @@
             align-items: center;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
-
         #header span {
             font-size: 24px;
             font-weight: bold;
             margin-bottom: 10px;
             display: block;
         }
-
         #header div {
             display: flex;
             justify-content: space-around;
         }
-
         #header a {
             text-decoration: none;
             color: #333;
@@ -47,20 +48,17 @@
             border-radius: 5px;
             transition: background-color 0.3s ease;
         }
-
         #header a:hover {
             background-color: #e0e0e0;
         }
-
         .section {
             margin-top: 70px;
             background-color: white;
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin: 70px 20px 20px 20px;
+            margin: 70px 30px 30px 30px;
         }
-
         .section img {
             float: right;
             border-radius: 10px;
@@ -73,44 +71,36 @@
             margin-right: 10px;
         }
 
-        .team-member {
-            display: flex;
-            align-items: center;
-            margin: 20px 0;
-        }
-
-        .team-member img {
-            height: 150px;
-            width: 150px;
-            border-radius: 50%;
-            margin-right: 20px;
-        }
-
     </style>
 </head>
-<body>
-
+<body> 
 <div id="header">
-    <span>Tint3d Logo</span>
+    <img src="logoLarge.png" alt="tint3d logo">
     <div>
         <a href="index.html">Home</a>
         <a href="team.html">Our Team</a>
-        <a href="#tech">Tech</a>
+        <a href="tech.html">Technology</a>
     </div>
 </div>
 
 <div class="section">
     <h2>Our Team</h2>
-    <p>We have a passionate and dedicated team committed to delivering the best for our clients. Get to know them below!</p>
+    <p>We are building a dedicated team that is committed to delivering new practicality to SLS printing. Get to know us below!</p>
 
     <div class="team-member">
-        <img src="domhead.jpg" alt="Dominic Barry">
+        <img src="domhead.JPG" alt="Dominic Barry">
         <div>
             <h3>Dominic Barry</h3>
             <p>Founder. With several years of experence in additive manufacturing, Dominic is well aware of the problems that people face when working to add additive manufacturing to existing workflows. He previously founded a successful SAAS company that provided software solutions to address housing needs in higher ed.   </p>
         </div>
     </div>
 
+    <footer style="background-color: #f2f2f2; padding: 20px 0; text-align: center;; font-size: 0.8em;">
+    <p style="color: #888; margin: 0;">© 2023 tint3d. All rights reserved.</p>
+    <p style="color: #888; margin: 0;">headquartered in beautiful milwaukee wisconsin</p>
+    <p style="color: #888; margin: 0;">this is a mockup for a class project</p>
+    <p style="color: #888; margin: 0;">we do not sell your data | please do not sell ours</p>
+</footer>
 
 
 </body>
