--- a/team.html
+++ b/team.html
@@ -57,7 +57,7 @@
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin: 80px 60px 30px 60px;
+            margin: 80px 100px 30px 100px;
         }
         .section img {
             float: right;
@@ -90,15 +90,18 @@
         <img src="domhead.JPG" alt="Dominic Barry">
         <div>
             <h3>Dominic Barry</h3>
-            <p>Founder. With several years of experence in additive manufacturing, Dominic is well aware of the problems that people face when working to add additive manufacturing to existing workflows. He previously founded a successful SAAS company that provided software solutions to address housing needs in higher ed.   </p>
+            <p>Founder. With several years of experience in additive manufacturing, Dominic is well aware of the problems that people face when working to add additive manufacturing to existing workflows. He previously founded a successful SAAS company that provided software solutions to address housing needs in higher ed.</p>
         </div>
     </div>
-</body>
+</div>
 
-    <footer style="background-color: #f2f2f2; padding: 20px 0; text-align: center;; font-size: 0.8em;">
+<footer style="background-color: #f2f2f2; padding: 20px 0; text-align: center; font-size: 0.8em;">
     <p style="color: #888; margin: 0;">© 2023 tint3d. All rights reserved.</p>
     <p style="color: #888; margin: 0;">headquartered in beautiful milwaukee wisconsin</p>
     <p style="color: #888; margin: 0;">this is a mockup for a class project</p>
     <p style="color: #888; margin: 0;">we do not sell your data | please do not sell ours</p>
 </footer>
+
+</body>
 </html>
+
