--- a/tech.html
+++ b/tech.html
@@ -80,6 +80,7 @@
         <a href="index.html">Home</a>
         <a href="team.html">Our Team</a>
         <a href="tech.html">Technology</a>
+        <a href="blog.html">Blog</a>
     </div>
 </div>
     
