--- a/tech.html
+++ b/tech.html
@@ -89,7 +89,7 @@
     <p>At Tint3d, we pride ourselves on the innovative deployments of the technologies we employ. Using dye to alter objects is something humans have done for centuries, but this is something brand new.</p>
 
     <div class="tech-detail">
-        <img src="tech-detail-1.jpg" alt="Tech Detail 1">
+        <img src="dye.png" alt="Tech Detail 1">
         <div>
             <h3>Heat and Dye Process</h3>
             <p>Our unique process starts with a heated dye bath. The combination of heat and pressure ensures an even coating. Moreover, our state-of-the-art jet system eliminates the risk of scratching, providing pristine parts every time.</p>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="tech-detail">
-        <img src="tech-detail-2.jpg" alt="Tech Detail 2">
+        <img src="diagram.png" alt="Tech Detail 2">
         <div>
             <h3>Drying Process</h3>
             <p>After dyeing, the solution is automatically drained, and each part undergoes a thorough rinse to remove excess dye. We finalize the process with a dry heating step, ensuring the dye sets perfectly.</p>
@@ -105,7 +105,6 @@
     </div>
 
     <div class="tech-detail">
-        <img src="tech-detail-3.jpg" alt="Tech Detail 3">
         <div>
             <h3>Innovative Material</h3>
             <p>Our proprietary material guarantees not only fantastic color results but also ensures the parts have remarkable mechanical strength and longevity.</p>
