--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
     <p>Our open-platform approach means you're not limited to proprietary dyes. You can use any brand, opening the door to an infinite array of color options. SLA printing's vast color palette is now accessible for SLS, bridging the gap between aesthetics and functionality.</p>
     <p>In a world where precision and appearance matter, we're here to redefine the standards of SLS 3D printing. Dive into an ocean of colors, maintain unparalleled quality, and leverage the full potential of additive manufacturing.</p>
 </div>
-<section style="text-align:center; padding: 20px; border: 1px solid #ccc; margin: 20px 0;">
-    <h2>Are you interested in keeping up to date on our SLS dye work?</h2>
-    <form action="/submit-email" method="post" style="display: inline-block; margin-top: 20px;">
-        <input type="email" name="user_email" placeholder="Enter your email" required style="padding: 10px; font-size: 16px;">
-        <input type="submit" value="Subscribe" style="padding: 10px 15px; font-size: 16px;">
+<section style="text-align:center; padding: 20px; border: 1px solid #ccc; margin: 20px 0; background-color: #f4f4f4;">
+    <h2 style="font-size: 1.5em; margin-bottom: 20px;">Are you interested in keeping up to date on our SLS dye work?</h2>
+    <form action="/submit-email" method="post" style="display: inline-block;">
+        <input type="email" name="user_email" placeholder="Enter your email" required style="padding: 10px; font-size: 1.2em; width: 250px; margin-right: 10px;">
+        <input type="submit" value="Subscribe" style="padding: 10px 20px; font-size: 1.2em; background-color: #333; color: #fff; border: none; cursor: pointer;">
     </form>
 </section>
+
     
 </body>
 
