Minor wording adjustment

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <source media="(max-width: 768px)" srcset="bracket2 (1).png">
         <img src="bracket3 (1).png" alt="Raw SLS Part">
     </picture
-    <p>Selective Laser Sintering (SLS) has revolutionized the manufacturing process by enabling the creation of parts that traditional methods can't achieve. Harnessing the advantages of AI-powered CAD, SLS brings incredible potential. However, its primary limitation has been the restricted color palette, predominantly limited to Black, White, and Gray.</p>
+    <p>Selective Laser Sintering (SLS) has revolutionized the manufacturing process by enabling the creation of parts that traditional methods can not achieve. Harnessing the advantages of AI-powered CAD, SLS brings incredible potential. However, its primary limitation has been the restricted color palette, predominantly limited to Black, White, and Gray.</p>
     <p>Raw SLA parts possess outstanding mechanical properties, but their lack of diverse color options becomes a constraint for those aiming for lifelike parts, especially when targeting end-users. Imagine if you could amplify the usability and aesthetic appeal of these parts without stretching your budget.</p>
 </div>
 
