--- a/tech.html
+++ b/tech.html
@@ -121,7 +121,7 @@
         <img src="dye.png" alt="Tech Detail 1">
         <div>
             <h3>Heat and Dye Process</h3>
-            <p>Our unique process starts with a heated dye bath. The combination of heat and pressure ensures an even coating. Moreover, our state-of-the-art jet system eliminates the risk of scratching, providing pristine parts every time.</p>
+            <p>Our unique process starts with a heated dye bath. The combination of heat and pressure ensures an even coating that penatrates the sintered powder. We also implement a state-of-the-art jet system which eliminates the risk of scratching from hooks traditionally used, providing pristine parts every time. Once the dye cycle has concluded, the dye is drained from the chamber and the parts are sprayed down to prevent dye pooling that can lead to uneven coloration. </p>
         </div>
     </div>
 
