--- a/blog.html
+++ b/blog.html
@@ -85,7 +85,7 @@
 </div>
 
     <div class="section">
-    <img src="demoBlogPostImage.jpg" alt="Website Launch Image"> 
+    <img src="blog1.png" alt="Website Launch Image"> 
     <h2>Welcome to Tint3d's Website!</h2>
     <p>
         I am thrilled to announce the launch of our newly redesigned website.
