--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 <div class="section" id="team" style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
     <h2 style="font-size: 1.5em; margin-bottom: 20px; text-align:center;">Keep up to date on the future of SLS</h2>
     <form action="/submit-email" method="post">
-        <input type="email" name="user_email" placeholder="Enter your email" required style="padding: 10px; font-size: 1.2em; width: 250px; margin-right: 10px;">
-        <input type="submit" value="Subscribe" style="padding: 10px 20px; font-size: 1.2em; background-color: #333; color: #fff; border: none; cursor: pointer;">
+        <input type="email" name="user_email" placeholder="Enter your email" required style="padding: 10px; font-size: 1.2em; width: 250px; margin-right: 10px; border-radius: 15px;">
+        <input type="submit" value="Subscribe" style="padding: 10px 20px; border-radius: 15px; font-size: 1.2em; background-color: #333; color: #fff; border: none; cursor: pointer;">
     </form>
 </div>
 
