Fixed header inconsistency

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Discover a revolution in 3D printing with our cost-effective dye machine. Transform your SLS 3D printed parts with vibrant colors while ensuring the highest quality. Expand the horizons of additive manufacturing with us.">
 <meta name="keywords" content="SLS 3D printing, dye machine, additive manufacturing, vibrant colors, high quality, low-cost dye">
 <meta property="og:title" content="Revolutionize Your 3D Printing with Our Innovative Dye Machine">
-<meta property="og:description" content="Unleash unlimited colors for your SLS 3D printed parts. Elevate the quality and aesthetics of your creations with a all in one SLS dye machine">
+<meta property="og:description" content="Unleash unlimited colors for your SLS 3D printed parts. Elevate the quality and aesthetics of your creations with a all on one SLS dye machine">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tint3d Webpage</title>
@@ -22,7 +22,7 @@
             top: -10px;
             left: 10px;
             right: 10px;
-            height: 60;
+            height: 60px;
             background-color: white;
             display: flex;
             justify-content: space-between;
@@ -57,7 +57,7 @@
             padding: 20px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin: 80px 30px 30px 30px;
+            margin: 80px 100px 30px 100px;
         }
         .section img {
             float: right;
