--- a/blog.html
+++ b/blog.html
@@ -85,6 +85,26 @@
 </div>
 
     <div class="section">
+    <h2>Understanding SLS and Binder Jetting in 3D Printing</h2>
+    <p>
+        Welcome the second blog post from tint3d! Today, I am giving you an overview into two popular powder 3D printing technologies: Selective Laser Sintering (SLS) and Binder Jetting. Let's understand the key differences and how they can both benefit from dyeing technology when taking the parts to market. 
+    </p>
+    <p>
+        Selective Laser Sintering (SLS) utilizes a high-powered laser to fuse small particles of plastic, metal, ceramic, or glass powders. The laser selectively fuses the powdered material by scanning the cross-sections generated from a 3D digital description of the part on the surface of a powder bed. After each cross-section is scanned, the powder bed is lowered, and a new layer of material is applied on top. The process continues until the part is completed, and then the part is extracted from the powder. This requires some post processing, but leads to great parts.
+    </p>
+    <p>
+        On the other hand, Binder Jetting involves a printhead moving across a bed of powder material, selectively spraying a very small amount of a liquid binding agent in the shape of the section. Just like in SLS, after one layer is complete, the powder bed is lowered, and a fresh layer of material is spread on top. Once the printing is completed, the build box is placed in an oven to cure the parts, solidifying the binder and fusing the particles together. The end result is a solid object that is made of the substrate material as well as the binder that holds it all together.
+    </p>
+    <p>
+        While both technologies have their unique advantages and applications, what truly stands out is the potential they offer for dyeing technology. Given that both processes work with powdered materials, the potential for integrating color is vast. Dyeing technology can be used to change the color of the printed parts, either throughout the entire object or selectively in certain areas. This can enhance the aesthetic appeal, provide functional indicators, or even mimic real-life objects with greater accuracy. This is a great tool for parts that are customer facing, or are part of customer trials. 
+    </p>
+    <p>
+        Interested in learning more about the capabilities of SLS, Binder Jetting, or how dyeing technology can revolutionize your 3D printed creations? Join our mailing list for more insights and discussions, we have lots of interesting research and insights for forward thinking companies who are looking to leverage additive manufacturing in new ways.
+    </p>
+   
+</div>
+    
+    <div class="section">
     <img src="blog1.png" alt="Website Launch Image"> 
     <h2>Welcome to Tint3d's Website!</h2>
     <p>
